# Primus-Turbo

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  compile.sh  requirements.txt  setup.py  slurm_reinstall_turbo.sh  slurm_test_internode.sh  test_internode.py
.github/: CODEOWNERS
.github/workflows/: ci.yaml
benchmark/: README.md
benchmark/accuracy/: README.md  eval_attention_accuracy.py  eval_gemm_accuracy.py  eval_sf_accuracy.py  metrics.py  utils.py
benchmark/models/: basic_transformer.py  benchmark.py
benchmark/ops/: bench_attention.py  bench_deep_ep.py  bench_fp8_linear.py  bench_gemm.py  bench_gemm_fp8.py  bench_grouped_gemm.py  bench_grouped_gemm_fp8.py  bench_quant.py
benchmark/ops/deep_ep/: model_cfg.py  (+2 more)
benchmark/pretrain/: pretrain_main.py
csrc/include/: common.h  float8.h  gemm_fp8.h
csrc/jax/: CMakeLists.txt  bindings_jax.cpp  extensions.h  multiply_add.cu  pybind.cpp
csrc/jax/normalization/: normalization.cpp
csrc/pytorch/: bindings_pytorch.cpp  extensions.h  type_traits.h  utils.h
docs/: examples.md  install_dependencies.md
primus_turbo/: __init__.py
primus_turbo/jax/: __init__.py  initialize.py
primus_turbo/pytorch/: __init__.py
primus_turbo/utils/: __init__.py  cuda2hip_mappings.py  hip_extension.py  hipify_python.py
tests/: test_utils.py
tests/jax/: lax_test.py
tests/pytorch/: test_gemm_numerical.py  test_special_functions.py  test_utils.py
tests/utils/: metric_utils.py  numerical_utils.py
tools/: build_3rdparty.py  build_ext.py  build_utils.py  patch.py
(+262 files in other folders)
